--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -149,9 +149,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateSlot.svg&amp;filetimestamp=20240101091129&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateSlot.html" title="Sketcher CreateSlot">Dr&aacute;&#382;ka</a>: Vytvo&#345;&iacute; dr&aacute;&#382;ku.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcSlot.svg&amp;filetimestamp=20240101085806&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcSlot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcSlot.html" title="Sketcher CreateArcSlot">Obloukov&aacute; dr&aacute;&#382;ka</a>: Vytvo&#345;&iacute; obloukovou dr&aacute;&#382;ku. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
 <ul><li><span id="Sketcher_CompCreateBSpline"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSpline.svg&amp;filetimestamp=20240101085839&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it B-Splajn:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSpline.svg&amp;filetimestamp=20240101085839&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Spline</a>: Creates a B-spline curve from control points. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Or from knot points.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSpline.svg&amp;filetimestamp=20240101085839&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Splajn</a>: Vytvo&#345;&iacute; k&#345;ivku B-spline z kontroln&iacute;ch bod&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Nebo z uzlov&yacute;ch bod&#367;.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePeriodicBSpline.svg&amp;filetimestamp=20240101170403&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePeriodicBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePeriodicBSpline.html" title="Sketcher CreatePeriodicBSpline">Periodic B-Spline</a>: Creates a periodic (closed) B-spline curve from control points. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: This is the same tool as <a href="../Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Spline</a> but with a different initial mode.</li></ul></dd></dl>
 </div>
@@ -714,13 +712,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118115442
+Cached time: 20260118115551
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.408 seconds
-Real time usage: 0.648 seconds
-Preprocessor visited node count: 1508/1000000
+CPU time usage: 0.395 seconds
+Real time usage: 0.583 seconds
+Preprocessor visited node count: 1507/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -730,19 +728,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.171      1 -total
- 20.83%    9.824      1 Template:Sketcher_Tools_navi/cs
- 14.58%    6.877      1 Template:Userdocnavi/cs
- 14.34%    6.762      2 Template:Navigation_menu_2
-  8.34%    3.932      1 Template:PropertyView
-  7.78%    3.669     34 Template:Version
-  7.55%    3.561      2 Template:Docnav
-  6.46%    3.045      1 Template:TOCright
-  5.94%    2.800     14 Template:KEY
-  5.86%    2.766      8 Template:VersionPlus
+100.00%   36.823      1 -total
+ 26.77%    9.856      1 Template:Sketcher_Tools_navi/cs
+ 16.70%    6.151      2 Template:Navigation_menu_2
+ 14.56%    5.360      1 Template:Userdocnavi/cs
+ 10.58%    3.897      1 Template:PropertyView
+  7.00%    2.578      1 Template:Variable
+  6.81%    2.507      2 Template:Docnav
+  6.09%    2.242     34 Template:Version
+  5.89%    2.169      6 Template:Caption
+  5.09%    1.873      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115442 and revision id 1740365. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115550 and revision id 1740367. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
