--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -165,9 +165,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vertik&aacute;ln&iacute; rozm&#283;r</a>: Ur&#269;uje vertik&aacute;ln&iacute; vzd&aacute;lenost mezi dv&#283;ma body nebo koncov&yacute;mi body p&#345;&iacute;mky. Pokud je p&#345;edem vybr&aacute;n jeden bod, vzd&aacute;lenost se vztahuje k po&#269;&aacute;tku n&aacute;&#269;rtu.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">Vzd&aacute;lenost</a>: Ur&#269;uje d&eacute;lku p&#345;&iacute;mky, vzd&aacute;lenost mezi dv&#283;ma body, kolmou vzd&aacute;lenost mezi bodem a p&#345;&iacute;mkou; nebo <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span> vzd&aacute;lenost mezi okraji dvou kruh&#367; nebo oblouk&#367;, nebo mezi okrajem kruhu nebo oblouku a p&#345;&iacute;mkou; nebo <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>, d&eacute;lku oblouku.</li></ul></dd></dl>
 <dl><dd><ul><li><span id="Sketcher_CompConstrainRadDia"><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainRadiam.svg&amp;filetimestamp=20240101173642&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainRadiam.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainRadiam.html" title="Sketcher ConstrainRadiam">Rozm&#283;r polom&#283;ru/pr&#367;m&#283;ru</a>: Upravuje polom&#283;r oblouk&#367; a kruh&#367; v&aacute;hy B-spline a pr&#367;m&#283;r kruh&#367;.</span></li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainRadius.svg&amp;filetimestamp=20240101173607&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainRadius.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainRadius.html" title="Sketcher ConstrainRadius">Radius Dimension</a>: Fixes the radius of circles, arcs and B-spline weight circles.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainRadius.svg&amp;filetimestamp=20240101173607&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainRadius.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainRadius.html" title="Sketcher ConstrainRadius">Rozm&#283;r polom&#283;ru</a>: Ur&#269;uje polom&#283;r kruh&#367;, oblouk&#367; a kruh&#367; s v&aacute;hou B-spline.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDiameter.svg&amp;filetimestamp=20240101173623&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDiameter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDiameter.html" title="Sketcher ConstrainDiameter">Diameter Dimension</a>: Fixes the diameter of circles and arcs.</li></ul></dd></dl>
 </div>
@@ -690,13 +688,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118120906
+Cached time: 20260118120936
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.392 seconds
-Real time usage: 0.551 seconds
-Preprocessor visited node count: 1496/1000000
+CPU time usage: 0.405 seconds
+Real time usage: 0.573 seconds
+Preprocessor visited node count: 1495/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -706,19 +704,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.424      1 -total
- 23.49%    8.087      1 Template:Sketcher_Tools_navi/cs
- 14.30%    4.922      2 Template:Navigation_menu_2
- 12.03%    4.141      1 Template:Userdocnavi/cs
- 11.43%    3.933      1 Template:PropertyView
-  7.47%    2.570      2 Template:Docnav
-  6.59%    2.269     34 Template:Version
-  6.12%    2.107     14 Template:KEY
-  5.96%    2.053      8 Template:VersionPlus
-  5.21%    1.793      1 Template:Variable
+100.00%   43.938      1 -total
+ 27.71%   12.176      1 Template:Sketcher_Tools_navi/cs
+ 17.57%    7.722      2 Template:Navigation_menu_2
+ 15.28%    6.712      1 Template:Userdocnavi/cs
+  9.12%    4.007     14 Template:KEY
+  9.07%    3.987      1 Template:PropertyView
+  5.84%    2.564     34 Template:Version
+  5.65%    2.483      6 Template:Caption
+  5.22%    2.292      2 Template:Docnav
+  4.04%    1.775      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118120905 and revision id 1740395. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118120935 and revision id 1740397. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
