--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -36,7 +36,7 @@
 </p><p><span id="Edit_object_label"></span>
 </p>
 <h3><span id=".D0.A0.D0.B5.D0.B4.D0.B0.D0.BA.D1.82.D0.B8.D1.80.D0.B0.D0.BD.D0.B5_.D0.BD.D0.B0_.D0.B5.D1.82.D0.B8.D0.BA.D0.B5.D1.82_.D0.BD.D0.B0_.D0.BE.D0.B1.D0.B5.D0.BA.D1.82"></span><span class="mw-headline" id="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077;_&#1085;&#1072;_&#1077;&#1090;&#1080;&#1082;&#1077;&#1090;_&#1085;&#1072;_&#1086;&#1073;&#1077;&#1082;&#1090;">&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1077;&#1090;&#1080;&#1082;&#1077;&#1090; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</span></h3>
-<p>Select an object in the first column and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (on Windows and Linux), or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (on macOS), to edit its <span style="font-size:60%; padding-right:0.8em;">&#1044;&#1072;&#1085;&#1085;&#1080;</span><b>Label</b> property. This property can also be edited via the context menu option <b>Rename</b> or in the <a href="../Property_View.html" title="Property View">Property View</a>.
+<p>&#1048;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074; &#1087;&#1098;&#1088;&#1074;&#1072;&#1090;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1072; &#1080; &#1085;&#1072;&#1090;&#1080;&#1089;&#1085;&#1077;&#1090;&#1077; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (&#1085;&#1072; Windows &#1080; Linux), &#1080;&#1083;&#1080; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (&#1085;&#1072; macOS), &#1079;&#1072; &#1076;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086;&#1090;&#1086; &#1084;&#1091; <span style="font-size:60%; padding-right:0.8em;">&#1044;&#1072;&#1085;&#1085;&#1080;</span><b>Label</b>. &#1058;&#1086;&#1074;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1086; &#1080; &#1095;&#1088;&#1077;&#1079; &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; &#1086;&#1090; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; <b>Rename</b> &#1080;&#1083;&#1080; &#1074; <a href="../Property_View.html" title="Property View">Property View</a>.
 </p>
 <h3><span class="mw-headline" id="Edit_object_description">Edit object description</span></h3>
 <p>An object can optionally have a description. This information is stored in its <span style="font-size:60%; padding-right:0.8em;">&#1044;&#1072;&#1085;&#1085;&#1080;</span><b>Label2</b> property. If the description column is displayed you can edit this property by selecting an object in that column and pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (on Windows and Linux), or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (on macOS). The property can also be changed in the <a href="../Property_View.html" title="Property View">Property View</a>.
@@ -158,12 +158,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118120837
+Cached time: 20260118121012
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.147 seconds
-Real time usage: 0.208 seconds
+CPU time usage: 0.121 seconds
+Real time usage: 0.173 seconds
 Preprocessor visited node count: 749/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -174,19 +174,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.852      1 -total
- 19.44%   11.244      1 Template:Std_Base_navi/bg
- 14.65%    8.475      3 Template:Navigation_menu_2
- 13.78%    7.971      1 Template:Interface_navi/bg
- 11.99%    6.935      2 Template:PropertyData
- 10.16%    5.880      1 Template:Userdocnavi/bg
-  7.52%    4.350      2 Template:Caption
-  7.36%    4.258      1 Template:TOCright
-  5.33%    3.086      5 Template:Version
-  5.16%    2.987      3 Template:Variable
+100.00%   40.665      1 -total
+ 29.60%   12.038      1 Template:Std_Base_navi/bg
+ 21.35%    8.682      3 Template:Navigation_menu_2
+ 15.47%    6.291      1 Template:Interface_navi/bg
+ 14.34%    5.830      1 Template:Userdocnavi/bg
+  8.14%    3.309      2 Template:PropertyData
+  5.19%    2.111      1 Template:PropertyView
+  4.81%    1.956      3 Template:Variable
+  4.30%    1.750     19 Template:KEY
+  4.18%    1.698      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118120837 and revision id 1740393. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121011 and revision id 1740399. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
