--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -35,7 +35,7 @@
 <p>&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103;&#1090; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; &#1074;&#1080;&#1085;&#1072;&#1075;&#1080; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1072; &#1089; &#1080;&#1082;&#1086;&#1085;&#1080;&#1090;&#1077; &#1080; &#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080;&#1090;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;. &#1044;&#1074;&#1077; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1086;&#1083;&#1086;&#1085;&#1080; &#1089;&#1098;&#1097;&#1086; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1087;&#1086;&#1082;&#1072;&#1079;&#1072;&#1085;&#1080; &#1087;&#1086; &#1078;&#1077;&#1083;&#1072;&#1085;&#1080;&#1077;. &#1047;&#1072; &#1076;&#1072; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1090;&#1077; &#1090;&#1077;&#1079;&#1080; &#1082;&#1086;&#1083;&#1086;&#1085;&#1080; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1074;&#1098;&#1088;&#1093;&#1091; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; &#1080; &#1074; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; <b>Tree Settings</b> &#1080; &#1089;&#1083;&#1077;&#1076; &#1090;&#1086;&#1074;&#1072; <b>Show Description</b> (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>) &#1080;/&#1080;&#1083;&#1080; <b>Show Internal Name</b> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). &#1047;&#1072;&#1075;&#1083;&#1072;&#1074;&#1080;&#1103;&#1090;&#1072; &#1085;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1080;&#1090;&#1077; &#1089;&#1077; &#1076;&#1086;&#1073;&#1072;&#1074;&#1103;&#1090;, &#1072;&#1082;&#1086; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1086;&#1090; &#1077;&#1076;&#1085;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1072;. &#1054;&#1073;&#1098;&#1088;&#1085;&#1077;&#1090;&#1077; &#1074;&#1085;&#1080;&#1084;&#1072;&#1085;&#1080;&#1077;, &#1095;&#1077; &#1074;&#1098;&#1090;&#1088;&#1077;&#1096;&#1085;&#1080;&#1090;&#1077; &#1080;&#1084;&#1077;&#1085;&#1072; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1085;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1103;&#1085;&#1080;.
 </p><p><span id="Edit_object_label"></span>
 </p>
-<h3><span id=".D0.A0.D0.B5.D0.B4.D0.B0.D0.BA.D1.82.D0.B8.D1.80.D0.B0.D0.BD.D0.B5_.D0.BD.D0.B0_.D0.B5.D1.82.D0.B8.D0.BA.D0.B5.D1.82_.D0.BD.D0.B0_.D0.BE.D0.B1.D0.B5.D0.BA.D1.82"></span><span class="mw-headline" id="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077;_&#1085;&#1072;_&#1077;&#1090;&#1080;&#1082;&#1077;&#1090;_&#1085;&#1072;_&#1086;&#1073;&#1077;&#1082;&#1090;">&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1077;&#1090;&#1080;&#1082;&#1077;&#1090; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</span></h3>
+<h3><span id=".D0.A0.D0.B5.D0.B4.D0.B0.D0.BA.D1.82.D0.B8.D1.80.D0.B0.D0.BD.D0.B5_.D0.B5.D1.82.D0.B8.D0.BA.D0.B5.D1.82.D0.B0_.D0.BD.D0.B0_.D0.BE.D0.B1.D0.B5.D0.BA.D1.82"></span><span class="mw-headline" id="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077;_&#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1072;_&#1085;&#1072;_&#1086;&#1073;&#1077;&#1082;&#1090;">&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1072; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</span></h3>
 <p>&#1048;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074; &#1087;&#1098;&#1088;&#1074;&#1072;&#1090;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1072; &#1080; &#1085;&#1072;&#1090;&#1080;&#1089;&#1085;&#1077;&#1090;&#1077; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (&#1085;&#1072; Windows &#1080; Linux), &#1080;&#1083;&#1080; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (&#1085;&#1072; macOS), &#1079;&#1072; &#1076;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086;&#1090;&#1086; &#1084;&#1091; <span style="font-size:60%; padding-right:0.8em;">&#1044;&#1072;&#1085;&#1085;&#1080;</span><b>Label</b>. &#1058;&#1086;&#1074;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1086; &#1080; &#1095;&#1088;&#1077;&#1079; &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; &#1086;&#1090; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; <b>Rename</b> &#1080;&#1083;&#1080; &#1074; <a href="../Property_View.html" title="Property View">Property View</a>.
 </p><p><span id="Edit_object_description"></span>
 </p>
@@ -159,12 +159,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118121057
+Cached time: 20260118121111
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.334 seconds
+CPU time usage: 0.124 seconds
+Real time usage: 0.186 seconds
 Preprocessor visited node count: 750/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -175,19 +175,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   79.803      1 -total
- 30.90%   24.656      3 Template:Navigation_menu_2
- 29.38%   23.444      1 Template:Interface_navi/bg
- 24.31%   19.399      1 Template:Std_Base_navi/bg
-  7.37%    5.881      2 Template:PropertyData
-  7.20%    5.749      1 Template:PropertyView
-  6.83%    5.447      1 Template:Userdocnavi/bg
-  5.19%    4.143      2 Template:Caption
-  4.39%    3.502      5 Template:Version
-  3.77%    3.009      1 Template:TOCright
+100.00%   33.979      1 -total
+ 25.30%    8.595      1 Template:Std_Base_navi/bg
+ 21.77%    7.397      3 Template:Navigation_menu_2
+ 13.10%    4.450      1 Template:Interface_navi/bg
+ 11.97%    4.069      1 Template:Userdocnavi/bg
+  9.86%    3.350      2 Template:PropertyData
+  6.10%    2.073      3 Template:Variable
+  5.98%    2.033      1 Template:PropertyView
+  5.07%    1.724     19 Template:KEY
+  4.97%    1.688      6 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121057 and revision id 1740405. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121111 and revision id 1740407. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
